tests/ui/spirv-attr/bad-infer-storage-class.stderr
error: storage class mismatch
 --> $DIR/bad-infer-storage-class.rs:7:13
  |
7 | pub fn main(#[spirv(uniform)] error: &Image2d, #[spirv(uniform_constant)] warning: &Image2d) {}
  |             ^^^^^^^^-------^^^^^^^^^^--------
  |                     |                |
  |                     |                UniformConstant inferred from type
  |                     Uniform specified in attribute
  |
help: remove storage class attribute to use UniformConstant as storage class
 --> $DIR/bad-infer-storage-class.rs:7:21
  |
7 | pub fn main(#[spirv(uniform)] error: &Image2d, #[spirv(uniform_constant)] warning: &Image2d) {}
  |                     ^^^^^^^

warning: redundant storage class specifier, storage class is inferred from type
 --> $DIR/bad-infer-storage-class.rs:7:56
  |
7 | pub fn main(#[spirv(uniform)] error: &Image2d, #[spirv(uniform_constant)] warning: &Image2d) {}
  |                                                        ^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

